fixing text alignments in burger menu

--- a/css/style.css
+++ b/css/style.css
@@ -1467,6 +1467,7 @@ input[type="submit"]:hover {
     display: grid;
     justify-items: end;
     justify-self: right;
+    text-align: right;
   }
   .left {
     grid-column: 1/2;
